[tool.poetry]
name = "naive_mm_analytics"
version = "0.1.0"
description = "Get Fills Info and Run Analytics for Arb Capture"
authors = ["kuparikh <kush@floating.group>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^2.0.6"
typing-extensions = "4.4.0"
numpy = "^1.24.2"
asyncio = "^3.4.3"
requests = "^2.28.2"
psycopg2-binary = "^2.9.6"
async-sqlalchemy = "^1.0.0"
aiohttp = "^3.8.4"
ccxt = "^3.0.72"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
